# quant-rs

./: Cargo.toml
docs/backtest/: engine.md  results.md
docs/metrics/: drawdown.md  returns.md  sharpe.md  sortino.md  volatility.md
docs/portfolio/: portfolio.md  position.md
docs/strategy/: moving_average.md  signals.md
examples/: backtest.rs  metrics.rs  portfolio.rs  strategy.rs
src/: lib.rs
src/backtest/: engine.rs  results.rs
src/core/: errors.rs  mod.rs  validation.rs
src/metrics/: drawdown.rs  mod.rs  returns.rs  sharpe.rs  sortino.rs  volatility.rs
src/portfolio/: portfolio.rs  position.rs
src/strategy/: mod.rs  moving_average.rs
tests/: backtest_tests.rs  metrics_tests.rs  portfolio_tests.rs  strategy_tests.rs
